--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts"
+    "dev": "nodemon index.ts",
+    "migrate": "node-pg-migrate",
+    "migrate:create": "node-pg-migrate create"
   },
   "keywords": [],
   "author": "Deadend4",
@@ -14,9 +16,11 @@
   "dependencies": {
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "octokit": "^4.0.2"
+    "octokit": "^4.0.2",
+    "pg": "^8.12.0"
   },
   "devDependencies": {
+    "node-pg-migrate": "^7.4.0",
     "nodemon": "^3.1.3"
   }
 }
