add github checker

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,8 @@
 DATABASE_URL=postgres://[USER]:[YOUR-PASSWORD]@[DB-URL]
 PORT=3003
 GITHUB_AUTH_TOKEN=ghp_[YOUR-TOKEN]
+DATABASE_HOST=[DB-URL]
+DATABASE_NAME=postgres
+DATABASE_PORT=4321
+DATABASE_USER=[USER]
+DATABASE_PASSWORD=[YOUR-PASSWORD]
