--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon index.ts",
+    "dev": "nodemon index.js",
     "migrate": "node-pg-migrate",
     "migrate:create": "node-pg-migrate create"
   },
@@ -14,13 +14,18 @@
   "author": "Deadend4",
   "license": "ISC",
   "dependencies": {
+    "commander": "^12.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "ghapi": "^0.0.5",
     "octokit": "^4.0.2",
     "pg": "^8.12.0"
   },
   "devDependencies": {
     "node-pg-migrate": "^7.4.0",
     "nodemon": "^3.1.3"
+  },
+  "bin": {
+    "ghapi": "./cli.js"
   }
 }
