--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,5 @@ DATABASE_NAME=postgres
 DATABASE_PORT=4321
 DATABASE_USER=[USER]
 DATABASE_PASSWORD=[YOUR-PASSWORD]
+CLI_PORT=3003
+CLI_HOST=[CLI-URL]
