--- a/.env.example
+++ b/.env.example
@@ -8,3 +8,5 @@ DATABASE_USER=[USER]
 DATABASE_PASSWORD=[YOUR-PASSWORD]
 CLI_PORT=3003
 CLI_HOST=[CLI-URL]
+CLIENT_PORT=5173
+CLIENT_HOST=[CLIENT-URL]
